server is up and running now

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Global Project</title>
+	<title>Global Software Development Project</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -46,14 +46,14 @@
 				
 				<div class="col-sm-8 profileCard">
 					<div style="text-align: center;">
-						<img class="profilePic" src="./Profiles/images/omerBhai.jpg">
+						<img class="profilePic" src="/images/omerBhai.jpg">
 					</div>
 					
 					<div class="text-center">
 						<h4 class="teamName">Omer Aslam </h4>
 						<div class="Role">( Team Lead )</div>
 						<p class="aboutMe">Worked as a Senior Software Engineer - TCS Pvt. Ltd. Folio3, Silkbank, IBEX Global(TRG) companies. Involved in designing application’s architechture and Research Development, analyzing client’s requirement and contributing senior developing role for projects</p>
-						<a href="./Profiles/html/omerProfile.html" class="btn btn-primary">Profile</a>
+						<a href="/profile/omer" class="btn btn-primary">Profile</a>
 					</div>
 				</div>
 				<div class="col-sm-2"></div>
@@ -63,14 +63,14 @@
 				
 				<div class="col-sm-8 profileCard">
 					<div style="text-align: center;">
-						<img class="profilePic" src="./Profiles/images/saudhBhai.jpg">
+						<img class="profilePic" src="/images/saudhBhai.jpg">
 					</div>
 					
 					<div class="text-center">
 						<h4 class="teamName">Saud Khan Lodi </h4>
 						<div class="Role">( Back End Team Lead )</div>
 						<p class="aboutMe">Web and Android Developer. Worked in Digistalsofts and Base 7 companies and developed GPCSF Website(Web Portal & Android Application), SalesmanAssistant(Web Portal & Android Application), Schedule Assistant(Android Application).</p>
-						<a href="./Profiles/html/saudhProfile.html" class="btn btn-primary">Profile</a>
+						<a href="/profile/saud" class="btn btn-primary">Profile</a>
 					</div>
 				</div>
 				<div class="col-sm-2"></div>
@@ -82,14 +82,14 @@
 				
 				<div class="col-sm-8 profileCard">
 					<div style="text-align: center;">
-						<img class="profilePic" src="./Profiles/images/bilalBhai.jpeg">
+						<img class="profilePic" src="/images/bilalBhai.jpeg">
 					</div>
 					
 					<div class="text-center">
 						<h4 class="teamName">Abdul Bari </h4>
-						<div class="Role">( Git Master )</div>
-						<p class="aboutMe">Worked as a web developer in Riskof and developed a  web application for keeping track of patients record, Electronic Submissions, E-Billing and a social networking Ios Application. </p>
-						<a href="./Profiles/html/bilalProfile.html" class="btn btn-primary">Profile</a>
+						<div class="Role">( Backend Developer )</div>
+						<p class="aboutMe">Worked as a web developer in Riskof and developed a  web application for keeping track of patients record, Electronic Submissions, E-Billing and a social networking Ios Application, Web Portal for a College and multiple Wordpress Applications. </p>
+						<a href="/profile/abdulbari" class="btn btn-primary">Profile</a>
 					</div>
 				</div>
 				<div class="col-sm-2"></div>
@@ -99,14 +99,14 @@
 				
 				<div class="col-sm-8 profileCard">
 					<div style="text-align: center;">
-						<img class="profilePic" src="./Profiles/images/praveen.jpg">
+						<img class="profilePic" src="/images/praveen.jpg">
 					</div>
 					
 					<div class="text-center">
 						<h4 class="teamName">Guda Praveen Kumar </h4>
 						<div class="Role">( Backend Engineer )</div>
 						<p class="aboutMe">Freelancer and Web Developer. Worked in Tech Startup Sourceasy involved in  developed critical modules for Sourceasy such as Customer, Vendor, Shipment and Work in progress web applications and modified existing static CMS to dynamic and freelanced two projects.</p>
-						<a href="./Profiles/html/praveenProfile.html" class="btn btn-primary">Profile</a>
+						<a href="/profile/praveen" class="btn btn-primary">Profile</a>
 					</div>
 				</div>
 				<div class="col-sm-2"></div>
