--- a/views/saud.ejs
+++ b/views/saud.ejs
@@ -1,145 +1,262 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html>
 <html>
 <head>
-<title>GSD Project</title>
-<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/2.7.0/build/reset-fonts-grids/reset-fonts-grids.css" media="all" />
-<link rel="stylesheet" type="text/css" href="resume.css" media="all" />
+  <title>SAUD-BIN-HABIB</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <style>
+  .profilelData{
+    margin-top:3px;
+  }
+  .title{
+    font-weight: bold;
+  }
+  .profilePic{
+    height: 13rem;
+    border-radius: 50%;
+  }
+
+  .subHeader{
+    margin-top:5px;
+    font-weight: bold;
+  }
+  .bigFont{
+    font-size:larger;
+  }
+  hr{
+    border-top:1px solid darkgrey !important;
+  }
+
+</style>
 </head>
-<body>
-<div id="doc2" class="yui-t7">
-  <div id="inner">
-    <div id="hd">
-      <div class="yui-gc">
-        <div class="yui-u first">
-          <h1>Jonathan Doe</h1>
-          <h2>Web Designer, Director</h2>
-        </div>
-        <div class="yui-u">
-          <div class="contact-info">
-            <h3><a id="pdf" href="#">Download PDF</a></h3>
-            <h3><a href="#">name@yourdomain.com</a></h3>
-            <h3>(313) - 867-5309</h3>
-          </div>
-          <!--// .contact-info -->
+<body style="background: #e4e1e1">
+  <div class="container">
+    <div class="row">
+
+      <div class="col-sm-6">
+        <div>
+          <h1>SAUD-BIN-HABIB</h1>
+          <div class="bigFont">Android Application Developer</div>
+
         </div>
       </div>
-      <!--// .yui-gc -->
-    </div>
-    <!--// hd -->
-    <div id="bd">
-      <div id="yui-main">
-        <div class="yui-b">
-          <div class="yui-gf">
-            <div class="yui-u first">
-              <h2>Profile</h2>
-            </div>
-            <div class="yui-u">
-              <p class="enlarge"> Progressively evolve cross-platform ideas before impactful infomediaries. Energistically visualize tactical initiatives before cross-media catalysts for change. </p>
-            </div>
-          </div>
-          <!--// .yui-gf -->
-          <div class="yui-gf">
-            <div class="yui-u first">
-              <h2>Skills</h2>
-            </div>
-            <div class="yui-u">
-              <div class="talent">
-                <h2>Web Design</h2>
-                <p>Assertively exploit wireless initiatives rather than synergistic core competencies. </p>
-              </div>
-              <div class="talent">
-                <h2>Interface Design</h2>
-                <p>Credibly streamline mission-critical value with multifunctional functionalities. </p>
-              </div>
-              <div class="talent">
-                <h2>Project Direction</h2>
-                <p>Proven ability to lead and manage a wide variety of design and development projects in team and independent situations.</p>
-              </div>
-            </div>
-          </div>
-          <!--// .yui-gf -->
-          <div class="yui-gf">
-            <div class="yui-u first">
-              <h2>Technical</h2>
-            </div>
-            <div class="yui-u">
-              <ul class="talent">
-                <li>XHTML</li>
-                <li>CSS</li>
-                <li class="last">Javascript</li>
-              </ul>
-              <ul class="talent">
-                <li>Jquery</li>
-                <li>PHP</li>
-                <li class="last">CVS / Subversion</li>
-              </ul>
-              <ul class="talent">
-                <li>OS X</li>
-                <li>Windows XP/Vista</li>
-                <li class="last">Linux</li>
-              </ul>
-            </div>
-          </div>
-          <!--// .yui-gf-->
-          <div class="yui-gf">
-            <div class="yui-u first">
-              <h2>Experience</h2>
-            </div>
-            <!--// .yui-u -->
-            <div class="yui-u">
-              <div class="job">
-                <h2>Facebook</h2>
-                <h3>Senior Interface Designer</h3>
-                <h4>2005-2007</h4>
-                <p>Intrinsicly enable optimal core competencies through corporate relationships. Phosfluorescently implement worldwide vortals and client-focused imperatives. Conveniently initiate virtual paradigms and top-line convergence. </p>
-              </div>
-              <div class="job">
-                <h2>Apple Inc.</h2>
-                <h3>Senior Interface Designer</h3>
-                <h4>2005-2007</h4>
-                <p>Progressively reconceptualize multifunctional "outside the box" thinking through inexpensive methods of empowerment. Compellingly morph extensive niche markets with mission-critical ideas. Phosfluorescently deliver bricks-and-clicks strategic theme areas rather than scalable benefits. </p>
-              </div>
-              <div class="job">
-                <h2>Microsoft</h2>
-                <h3>Principal and Creative Lead</h3>
-                <h4>2004-2005</h4>
-                <p>Intrinsicly transform flexible manufactured products without excellent intellectual capital. Energistically evisculate orthogonal architectures through covalent action items. Assertively incentivize sticky platforms without synergistic materials. </p>
-              </div>
-              <div class="job last">
-                <h2>International Business Machines (IBM)</h2>
-                <h3>Lead Web Designer</h3>
-                <h4>2001-2004</h4>
-                <p>Globally re-engineer cross-media schemas through viral methods of empowerment. Proactively grow long-term high-impact human capital and highly efficient innovation. Intrinsicly iterate excellent e-tailers with timely e-markets.</p>
-              </div>
-            </div>
-            <!--// .yui-u -->
-          </div>
-          <!--// .yui-gf -->
-          <div class="yui-gf last">
-            <div class="yui-u first">
-              <h2>Education</h2>
-            </div>
-            <div class="yui-u">
-              <h2>Indiana University - Bloomington, Indiana</h2>
-              <h3>Dual Major, Economics and English &mdash; <strong>4.0 GPA</strong> </h3>
-            </div>
-          </div>
-          <!--// .yui-gf -->
-        </div>
-        <!--// .yui-b -->
+      <div class="col-sm-1"></div>
+      <div class="col-sm-3 bigFont" style="margin-top:40px;">
+        <div>saudkhan3551@outlook.com</div>
+        <div>+49 1636744092</div>
       </div>
-      <!--// yui-main -->
+      <div class="col-sm-1">
+        <img class="profilePic" src="/images/saudhBhai.jpg">
+      </div>
+      <div class="col-sm-1"></div>
     </div>
-    <!--// bd -->
-    <div id="ft">
-      <p>Jonathan Doe &mdash; <a href="#">name@yourdomain.com</a> &mdash; (313) - 867-5309</p>
-      <p>Resume Template by: <a href="http://thingsthatarebrown.com/">Things That Are Brown</a></p>
+    <hr><br>
+    <div class="row">
+      <div class="col-sm-3">
+        <h3>Profile</h3>
+      </div>
+      <div class="col-sm-9 bigFont">
+        <p>
+          I have a passion for creating and enhancing anything technology related. When it comes to developing, myultimate goal is to make the world a better place. I'm a developer on the bleeding edge of technology have two year of extensive hands on experience of developing professional solutions.
+        </p>
+
+      </div>
+    </div><hr>
+
+    <div class="row">
+      <div class="col-sm-3">
+        <h3>Skills</h3>
+      </div>
+      <div class="col-sm-9 row">
+        <div class="col-sm-4">
+          <div><h3>Web Design</h3></div>
+          <div>Assertively exploit wireless initiatives rather than synergistic core competencies.</div>
+        </div>
+        <div class="col-sm-4">
+          <div><h3>Interface Design</h3></div>
+          <div>Credibly streamline mission-critical value with multifunctional functionalities.</div>
+        </div>
+        <div class="col-sm-4">
+          <div><h3>Project Direction</h3></div>
+          <div>Proven ability to lead and manage a wide variety of design and development projects in team and independent situations.</div>
+
+        </div>
+      </div>
     </div>
-    <!--// footer -->
+    <hr>
+
+    <div class="row">
+      <div class="col-sm-3">
+        <h3>Technical</h3>
+      </div>
+      <div class="col-sm-9 row">
+        <div class="row">
+          <div class="col-sm-4">Android</div>
+          <div class="col-sm-4">JSON</div>
+          <div class="col-sm-4">PHP</div>
+
+        </div>
+        <hr style="margin-top:5px !important; margin-bottom: 5px !important">
+        <div class="row">
+          <div class="col-sm-4">XML</div>
+          <div class="col-sm-4">HTML</div>
+          <div class="col-sm-4">Javascript</div>
+
+        </div>
+        <hr style="margin-top:5px !important; margin-bottom: 5px !important">
+        <div class="row">
+          <div class="col-sm-4">JAVA</div>
+          <div class="col-sm-4">CSS</div>
+          <div class="col-sm-4">Database</div>
+
+        </div>
+
+      </div>
+    </div>
+    <hr>
+
+    <div class="row">
+      <div class="col-sm-3">
+        <h3>Work Experience</h3>
+      </div>
+      <div class="col-sm-9">
+        <div class="row">
+          <div class="col-sm-9"><h4>Digitalsofts(Pvt) Ltd</h4> (Android Internee)</div>
+          <div class="col-sm-3"><div style="margin-top:15px;" class="bigFont">2015-2015</div></div>
+        </div>
+        <div class="row">
+          <div class="col-sm-9"><h4>Base 7 (Pvt) Ltd.</h4> (Android ApplicationDeveloper)</div>
+          <div class="col-sm-3"><div style="margin-top: 15px;" class="bigFont"> 2015-2017</div></div>
+        </div>
+
+
+      </div>
+    </div><hr>
+
+    <div class="row">
+      <div class="col-sm-3">
+        <h3>Projects</h3>
+      </div>
+      <div class="col-sm-9">
+        <div>
+          <h3>GPCSF Website(WebPortal)</h3>
+
+          <p>
+            Developed in PHP.It is theonlineweb portal available to admin and
+            management forthe roleof addingand managing thedata regarding the
+            Accounts,Departments,HOD,Faculty,Student,courses,lectures and Schedulefor
+            the sake of usingthe samedata on the android application.This websiteis
+            developed forthesake of admin sidehandlingof data in theandroid application.
+          </p>
+        </div>
+        <hr>
+        <div>
+          <h3>GPCSF Application(Android Application)</h3>
+
+          <p>
+            Developed in Android. It is an android application which is used by the college
+            authorities for the sake of ͞Reminder of Events͟, Sending notification to the
+            ͞Faculty͟members of a specific department on their mobile devices using
+            mobile network, sending notification to the ͞Students͟for the particular
+            events, checking the ͞Schedule͟of the lecture of the specific day on which
+            you are using this android application in this app the management can send
+            inquiry message to the faculty members why they are not attending their
+            lectures. The last and the most important feature of this app is to update its
+            data from the website so for this we use JSON services to get the all data from
+            to the website and store that data into the local database of the android
+            application which is sqlite database.
+          </p>
+        </div>
+        <hr>
+        <div>
+          <h3>SalesmanAssistant(WebPortal)</h3>
+
+          <p>
+            Developed in PHP.Itisthe onlineweb portalavailable to admin and to the
+            management for the sake of checking the performance oftheir salesman.This
+            website is developed for the PolyersterFiber Companyforviewingthe sale of their
+            salesman andmanaging their employees and theircustomers.
+          </p>
+        </div>
+        <hr>
+        <div>
+          <h3>SalesmanAssistant(AndroidApplication) </h3>
+
+          <p>
+            Developed inAndroid. Itis an online android application developed forthe
+            salesman of thecompany foraddingnewclients,getting orderfrom theclients,
+            getting paymentfrom theclients and checkingthelistof debited clients and
+            checkingthe listof all his customerand all his sales.This android application is also
+            usingJSONservices to store the android application data on theofficialsite ofthe
+            companyfor thesake of viewingtheorders of differentsalesman andwhatis the
+            status oftheirordereithertheorderis fully paid or debited yet.
+          </p>
+        </div>
+        <hr>
+        <div>
+          <h3>Schedule Assistant(Android Application)</h3>
+
+          <p>
+            Developed in Android. It is an android application which is developed for the
+            people of all age groups for their ease. All of us often embarrass in front of
+            our teachers, boss or any other important person due to the ringing of the
+            mobile in the meeting, class, prayer etc. So for the sake of avoiding such we
+            develop an android application in which the user enter his schedule and the
+            time of his schedule so the mobile turn automatically to the silent mode so
+            you can disturb with the ringing of the phone, during the schedule time if
+            any person try to contact with you he will get the notification on his mobile
+            of your activity and ask him to try later and most importantly you can check
+            this notification history in which you can see that which messages are delivered to whom
+          </p>
+        </div>
+
+      </div>
+    </div><hr>
+
+    <div class="row">
+      <div class="col-sm-3">
+        <h3>Education</h3>
+      </div>
+      <div class="col-sm-9">
+        <div class="row">
+          <div class="col-sm-9"><h4>Hochschule Fulda</h4>
+            <div>Master Global Software Development</div>
+            <div>Fulda, Germany</div>
+
+          </div>
+          <div class="col-sm-3"><div style="margin-top:15px;" class="bigFont"> 2017-2019</div></div>
+        </div>
+        <hr>
+        <div class="row">
+          <div class="col-sm-9"><h4>GC University</h4>
+            <div>BS Information Technology</div>
+            <div>Faisalabad, Pakistan</div>
+
+          </div>
+          <div class="col-sm-3"><div style="margin-top:15px;" class="bigFont"> 2012-2016</div></div>
+        </div>
+        <hr>
+        <div class="row">
+          <div class="col-sm-9"><h4>CM&FT Centre Daska</h4>
+            <div>DAE</div>
+            <div>Daska,Pakistan</div>
+
+          </div>
+          <div class="col-sm-3"><div style="margin-top:15px;" class="bigFont"> 2008-2011</div></div>
+        </div>
+
+
+
+
+      </div>
+    </div><hr>
+    <div style="text-align: center;">
+        SAUD-BIN-HABIB — saudkhan3551@outlook.com — +49 1636744092
+    </div>
+
   </div>
-  <!-- // inner -->
-</div>
-<!--// doc -->
 </body>
 </html>
