added CRUD of listings

--- a/Client/html/partials/_listingDetails.html
+++ b/Client/html/partials/_listingDetails.html
@@ -1,11 +1,12 @@
 <!--//-->	
-<div class=" banner-buying">
+<div class="banner-buying listing-details-banner">
 	<div class=" container listing-title">
 		<h3><span>Listing</span> Details</h3>  
 
 	</div>
 </div>
 <!--//header-->
+
 <!---->
 <script type="text/javascript">
 	$('.carousel').carousel({
