--- a/Client/html/partials/_addNewListing.html
+++ b/Client/html/partials/_addNewListing.html
@@ -1,57 +1,58 @@
 <div class="login-right" style="padding:0px">
-	<h3>Add New Listing</h3>
+	<h3>Fill Listing Details</h3>
 	<div class="login-top">
 		<div class="error">
 			<span id="error-msg" style="color: red;"></span>
 		</div>
 		<div class="form-info">
 
-			<input id="firstname" type="text" placeholder="Title" required="" >
+			<input id="listing-title" type="text" placeholder="Title" required="" >
 
 			<textarea id="listing-description" rows="5" cols="35" placeholder="Enter Description"></textarea>
 
 			<div class="row">
 				<div class="col-md-4">
-					<input id="lastname" type="text" placeholder="Number of Bedrooms" required="" >
+					<input id="listing-noOfBeds" type="text" placeholder="Number of Bedrooms" required="" >
 				</div>
 				<div class="col-md-4">
-					<input id="email" type="email" placeholder="Number of Bathrooms" required="" >
+					<input id="listing-noOfBaths" type="text" placeholder="Number of Bathrooms" required="" >
 				</div>
 				<div class="col-md-4">
-					<input id="mobilenumber" type="text" placeholder="Kitchen" required="" >
+					<input id="listing-kitchen" type="text" placeholder="Kitchen" required="" >
 				</div>
 				
 			</div>
 
 			<div class="row">
 				<div class="col-md-4">
-					<input id="lastname" type="text" placeholder="Type of Listing" required="" >
+					<input id="listing-type" type="text" placeholder="Type of Listing" required="" >
 				</div>
 				<div class="col-md-4">
-					<input id="email" type="email" placeholder="Area" required="" >
+					<input id="listing-area" type="email" placeholder="Area" required="" >
 				</div>
 				<div class="col-md-4">
-					<input id="mobilenumber" type="text" placeholder="Price" required="" >
+					<input id="listing-price" type="text" placeholder="Price" required="" >
 				</div>
 				
 			</div>
-			<input id="mobilenumber" type="text" placeholder="Door Number, Street" required="" >
-			<input id="mobilenumber" type="text" placeholder="City" required="" >
+			<input id="listing-door" type="text" placeholder="Door Number, Street" required="" >
+			<input id="listing-city" type="text" placeholder="City" required="" >
 			<div class="row">
 				<div class="col-md-4">
-					<input id="lastname" type="text" placeholder="State" required="" >
+					<input id="listing-state" type="text" placeholder="State" required="" >
 				</div>
 				<div class="col-md-4">
-					<input id="email" type="email" placeholder="Country" required="" >
+					<input id="listing-country" type="email" placeholder="Country" required="" >
 				</div>
 				<div class="col-md-4">
-					<input id="mobilenumber" type="text" placeholder="Zip" required="" >
+					<input id="listing-zip" type="text" placeholder="Zip" required="" >
 				</div>
 				
 			</div>
 			
 			<div style="width: 100%;text-align: center;">
-				<a href="javascript:" onclick="addNewListing()" class="hvr-sweep-to-right more">SUBMIT</a> 
+				<a href="javascript:" class="hvr-sweep-to-right more listing-new-btn">SUBMIT</a> 
+				<a href="javascript:" class="hvr-sweep-to-right more listing-update-btn">UPDATE</a> 
 				
 			</div>
 			<br>
