--- a/Client/html/partials/_listingCard.html
+++ b/Client/html/partials/_listingCard.html
@@ -52,4 +52,15 @@
 
         </div>
     </div>
+
+    <div class="service-top title-heading">
+        <h3>Homies Agents</h3>
+    </div>
+    <div class="row">
+        <div class="col-md-3" id="agentCard">
+            
+
+        </div>
+        </div>
+    </div>
 </div>
