made changes in user and agent dashboard

--- a/Client/html/partials/_addNewListing.html
+++ b/Client/html/partials/_addNewListing.html
@@ -49,6 +49,12 @@
 				</div>
 				
 			</div>
+			<div>
+				<input type="file" id="listing-fileUpload" multiple onchange="checkUploadedFile()"/>
+			</div>
+			<div>
+				<div id="listing-images"></div>
+			</div>
 			
 			<div style="width: 100%;text-align: center;">
 				<a href="javascript:" class="hvr-sweep-to-right more listing-new-btn">SUBMIT</a> 
