--- a/Client/html/partials/_listingDetails.html
+++ b/Client/html/partials/_listingDetails.html
@@ -89,7 +89,7 @@
 				
 				<div style="text-align: center;">
 					<div>
-					<a href="javascript:" style="margin:0px" class="hvr-sweep-to-right more">MAKE AS FAVOURITE</a>
+					<a href="javascript:" style="margin:0px" class="hvr-sweep-to-right more mark-as-favourite">MAKE AS FAVOURITE</a>
 				</div><br>
 					<h4>AGENT INFO</h4><br>
 					<div>
@@ -100,11 +100,6 @@
 					<small>(RealEstate Agent)</small>
 				</div><br>
 				<div class="display-agent-info">
-					<!-- <div style="margin:10px;color: grey">
-						<div class="agentInfo-details"><i class="glyphicon glyphicon-phone agentInfo-icon"> </i> : 98239872349</div>
-						<div class="agentInfo-details"><i class="glyphicon glyphicon-phone-alt agentInfo-icon"></i> : 1238917239</div>
-						<div class="agentInfo-details"><i class="glyphicon glyphicon-envelope agentInfo-icon"> </i> : Johndoe@gmail.com</div>
-					</div> -->
 
 					<div class="agentInfo-message contact-right">
 						<div>Message me</div><br>
@@ -123,10 +118,11 @@
 						<textarea class="refer-details listing-info-inputs" style="height:80px;" rows="3" cols="35" style="resize: none;" placeholder="Description"></textarea>
 						<a href="javascript:" class="hvr-sweep-to-right more">SEND</a>
 					</div>
+
 				</div>
-			<div class="hide-agent-info" style="text-align: center;">
-				<b style="color:grey">Please login to contact with agent</b>
-			</div>
+				<div class="login-message" style="text-align: center;">
+					<b style="color:grey">Please login to contact with agent</b>
+				</div>
 		 </div>
 			
 	  </div>
