--- a/Client/html/partials/_listingDetails.html
+++ b/Client/html/partials/_listingDetails.html
@@ -90,8 +90,8 @@
 				<div style="text-align: center;">
 					<div>
 					<a id="mark-favourite" href="javascript:" onclick="markFavourite(true)" style="margin:0px" class="hvr-sweep-to-right more">MARK AS FAVOURITE</a>
-					<div class="unmark-fav" style="display: none;">
-						<span id="fav-span">You have marked this property as favourite</span>
+					<div id="unmark-fav">
+						<span id="fav-span">MARKED AS FAVOURITE</span>
 						<a id="unmark-favourite" href="javascript:" onclick="markFavourite(false)" style="margin:0px" class="hvr-sweep-to-right more">REMOVE FAVOURITE</a>	
 					</div>
 					
@@ -111,6 +111,10 @@
 						<div class="agentInfo-details"><i class="glyphicon glyphicon-envelope agentInfo-icon"> </i> : Johndoe@gmail.com</div>
 					</div> -->
 
+					<div class="error">
+					    <span id="error-msg-message" style="color: red;font-size: 12px;"></span>
+					</div>
+
 					<div class="agentInfo-message contact-right">
 						<div>Message me</div><br>
 						<div>
@@ -123,10 +127,13 @@
 					<br>
 					<div class="refer-property contact-right">
 						<h4 style="margin-left:10px">REFER THIS PROPERTY</h4><br>
-						<div class="refer-details"><input type="text" placeholder="Enter Name"></div>
-						<div class="refer-details"><input style="width: 100%" type="text" placeholder="Enter Email"></div>
-						<textarea class="refer-details listing-info-inputs" style="height:80px;" rows="3" cols="35" style="resize: none;" placeholder="Description"></textarea>
-						<a href="javascript:" class="hvr-sweep-to-right more">SEND</a>
+						<div class="error">
+						    <span id="error-msg-refer" style="color: red;font-size: 12px;"></span>
+						</div>
+						<div class="refer-details"><input id="referrer-name" type="text" placeholder="Enter Name"></div>
+						<div class="refer-details"><input id="email" style="width: 100%" type="text" placeholder="Enter Email"></div>
+						<textarea id="description" class="refer-details listing-info-inputs" style="height:80px;" rows="3" cols="35" style="resize: none;" placeholder="Description"></textarea>
+						<a href="javascript:" onclick="referListingToOther()" class="hvr-sweep-to-right more">SEND</a>
 					</div>
 				</div>
 			<div class="hide-agent-info" style="text-align: center;">
