--- a/Client/html/partials/_listingDetails.html
+++ b/Client/html/partials/_listingDetails.html
@@ -76,11 +76,13 @@
 			</div>
 			<div class="map-buy-single">
 				<h4>Neighborhood Info</h4>
-				<div class="map-buy-single1">
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d37494223.23909492!2d103!3d55!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x453c569a896724fb%3A0x1409fdf86611f613!2sRussia!5e0!3m2!1sen!2sin!4v1415776049771"></iframe>
+				<div id="listing-map" class="map-buy-single1">
+					
 
 				</div>
 			</div>
+
+			<div id="maps-debba"></div>
 
 		</div>
 		
