insert listing completed

--- a/Client/html/partials/_addNewListing.html
+++ b/Client/html/partials/_addNewListing.html
@@ -49,15 +49,15 @@
 					
 					<select id="listing-parking" class="in-drop form-control">
 						<option value="">Parking</option>
-						<option value="Yes">Yes</option>
-						<option value="No">No</option>
+						<option value="1">Yes</option>
+						<option value="0">No</option>
 					</select>
 				</div>
 				<div class="col-md-3">
 					<select id="listing-type" class="in-drop form-control">
 						<option value="">Ad Type</option>
-						<option value="Buy">Buy</option>
-						<option value="Rental">Rental</option>
+						<option value="2">Buy</option>
+						<option value="1">Rental</option>
 					</select>
 				</div>
 
@@ -65,8 +65,8 @@
 					
 					<select id="listing-category" class="in-drop form-control">
 						<option value="">Category</option>
-						<option value="House">House</option>
-						<option value="Apartment">Apartment</option>
+						<option value="1">House</option>
+						<option value="2">Flat</option>
 					</select>
 				</div>
 				
