adding agent, map and profile work

--- a/Client/html/partials/_agentCard.html
+++ b/Client/html/partials/_agentCard.html
@@ -14,21 +14,21 @@
                 <div class="col-md-12 row realEstateAgents">
                     <div class="col-md-3 col-sm-3 agentCardsAttribute">Company</div>
                     <div class="col-md-1 col-sm-1 agentCardsAttribute" style="margin-left: -5px;">:</div>
-                    <div class="col-md-8 col-sm-8 agentCardsValue realEstateState" data-content='CompanyName'></div>
+                    <div class="col-md-8 col-sm-8 agentCardsValue" data-content='CompanyName'></div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-12 row realEstateAgents">
                     <div class="col-md-3 col-sm-3 agentCardsAttribute">Contact</div>
                     <div class="col-md-1 col-sm-1 agentCardsAttribute" style="margin-left: -5px;">:</div>
-                    <div class="col-md-8 col-sm-8 agentCardsValue realEstateState" data-content='MobileNumber'></div>
+                    <div class="col-md-8 col-sm-8 agentCardsValue" data-content='MobileNumber'></div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-12 row realEstateAgents">
                     <div class="col-md-3 col-sm-3 agentCardsAttribute">Email</div>
                     <div class="col-md-1 col-sm-1 agentCardsAttribute" style="margin-left: -5px;">:</div>
-                    <div class="col-md-8 col-sm-8 agentCardsValue realEstateState" data-content='Email'></div>
+                    <div class="col-md-8 col-sm-8 agentCardsValue" data-content='Email'></div>
                 </div>
             </div>
         </div>
