--- a/Client/html/partials/_editProfile.html
+++ b/Client/html/partials/_editProfile.html
@@ -10,7 +10,7 @@
 			<input id="lastname" type="text" placeholder="Last Name" required="" >
 			<input id="email" type="email" placeholder="Email Adress" required="" >
 			<input id="mobilenumber" type="text" placeholder="Mobile Number" required="" >
-			<input id="address" type="text" placeholder="Adress" >
+			<input id="address" type="text" placeholder="Address" >
 			Profile Picture: &nbsp; &nbsp;<input id="profileimage" type="file" placeholder="Upload your profile picture" required="" >
 			
 			<div style="width: 100%;text-align: center;">
