--- a/Client/css/app.css
+++ b/Client/css/app.css
@@ -55,9 +55,7 @@
   font-size: 1.7em;
   margin: 0.5em 0em 0;
 }
-.listing-title, .listing-image{
-  cursor: pointer;
-}
+
 
 .searchIdx{
   border: 1px solid black;
@@ -68,6 +66,10 @@
 
   margin:15px 0px;
 
+}
+
+.listing-title, .listing-image{
+  cursor: pointer;
 }
 
 .adImage{
@@ -575,4 +577,37 @@ div.cell {
 
 .myprofile-content{
   padding-top:20px;
+}
+
+.realEstateAgent{
+  border: 1px solid lightgrey;
+  margin:15px 0px;
+}
+
+.agent-title, .agent-image{
+  cursor: pointer;
+}
+
+.agentImage{
+  text-align: center;
+}
+
+.agent-image{
+  width:89%;
+  height: 175px;
+}
+.agentCardDetails{
+  font-size: 11.5px;
+  
+}
+.agentCardsAttribute{
+  color: grey;
+  padding: 0px 10px 0px 11px !important;
+}
+.agentCardsValue{
+  color: darkgrey;
+  padding: 0px 10px 0px 10px !important;
+}
+.realEstateAgents{
+  display: inline-flex;
 }
