--- a/Client/html/partials/_listingCard.html
+++ b/Client/html/partials/_listingCard.html
@@ -57,10 +57,7 @@
         <h3>Homies Agents</h3>
     </div>
     <div class="row">
-        <div class="col-md-3" id="agentCard">
-            
-
-        </div>
-        </div>
+        <div class="col-md-3" id="agentCard"></div>
+    </div>   
     </div>
 </div>
