--- a/Client/html/partials/_listingCard.html
+++ b/Client/html/partials/_listingCard.html
@@ -12,8 +12,12 @@
 
                 </div>
                 <div class="most-1">
-                    <h5><div data="" class="listing-title"></div>
+                    <div class="row">
+                        <h5 class="col-sm-9"><div data="" class="listing-title"></div>
                        </h5>
+                       <div class="col-sm-3 realestateAd-status" style="padding: 0px;"></div>
+                    </div>
+                    
                     <hr class="divider">
                     <div class="adCardDetails">
 
