--- a/Client/html/partials/_editProfile.html
+++ b/Client/html/partials/_editProfile.html
@@ -11,7 +11,7 @@
 			<input id="email" type="email" placeholder="Email Adress" required="" >
 			<input id="mobilenumber" type="text" placeholder="Mobile Number" required="" >
 			<input id="address" type="text" placeholder="Address" >
-			Profile Picture: &nbsp; &nbsp;<input id="profileimage" type="file" placeholder="Upload your profile picture" required="" >
+			Profile Picture: &nbsp; &nbsp;<input id="profileimage" class="" type="file" placeholder="Upload your profile picture" required="" >
 			
 			<div style="width: 100%;text-align: center;">
 				<a href="javascript:" onclick="updateProfile();" class="hvr-sweep-to-right more edit-profile-btn">UPDATE PROFILE</a>
