--- a/Client/html/partials/_listingCard.html
+++ b/Client/html/partials/_listingCard.html
@@ -57,11 +57,14 @@
         </div>
     </div>
 
-    <div class="service-top title-heading">
-        <h3>Homies Agents</h3>
+    <div class="agent-section">
+        <div class="service-top title-heading">
+            <h3>Homies Agents</h3>
+        </div>
+        <div class="row" id="agentCard" style="margin-left: 15px;">
+            
+        </div>
     </div>
-    <div class="row" id="agentCard">
-        
-    </div>   
+       
     </div>
 </div>
