--- a/Client/css/app.css
+++ b/Client/css/app.css
@@ -55,13 +55,10 @@
   font-size: 1.7em;
   margin: 0.5em 0em 0;
 }
-<<<<<<< HEAD
+
 .listing-title, .listing-image, .edit-listing, .delete-listing{
   cursor: pointer;
 }
-=======
-
->>>>>>> production
 
 .searchIdx{
   border: 1px solid black;
@@ -530,14 +527,14 @@
 .msg-list-container{
   padding: 0px;
   overflow: auto;
-  height: 580px;
+  height: 66vh;
   width: 100%;
 }
 
 .message-right{
     padding: 1em 1em;
-    min-height: 500px;
-    overflow: hidden;
+    
+    overflow: scroll;
     position: relative;
     width: 100%;
 }
@@ -593,8 +590,6 @@ div.cell {
     padding: 0px;
 }
     
-
-
 .realEstateAgent{
   border: 1px solid lightgrey;
   margin:15px 0px;
@@ -627,4 +622,8 @@ div.cell {
 .realEstateAgents{
   display: inline-flex;
 }
->>>>>>> production
+
+.messages-container{
+  border: solid 1.8px #CCC;
+  padding: 0px !important;
+}
